--- a/packages/ckeditor5-build-balloon/tsconfig.types.json
+++ b/packages/ckeditor5-build-balloon/tsconfig.types.json
@@ -1,5 +1,5 @@
 {
-	"extends": "ckeditor5/tsconfig.json",
+//	"extends": "ckeditor5/tsconfig.json",
 	"compilerOptions": {
 		"declaration": true,
 		"emitDeclarationOnly": true,
